--- a/9.0/etc/nginx.conf
+++ b/9.0/etc/nginx.conf
@@ -47,9 +47,12 @@ http {
   proxy_read_timeout      90;
   proxy_buffers           32 4k;
   proxy_buffer_size       8k;
-  proxy_set_header        Host $host;
-  proxy_set_header        X-Real-IP $remote_addr;
-  proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header         Host $http_host;
+  proxy_set_header         X-Real-IP $remote_addr;
+  proxy_set_header         X-Forward-For $proxy_add_x_forwarded_for;
+  # when redirecting to https:
+  # proxy_set_header         X-Forwarded-Proto https;
+  proxy_set_header         X-Forwarded-Host $http_host;
   proxy_headers_hash_bucket_size 64;
 
   # List of application servers
