Allow to customize nginx http access rules
The rules are declared using the environment variable "NGX_HTTP_ACCESS"
with multilines.

Example in docker-compose.yml:

  nginx:
    image: camptocamp/odoo-nginx:9.0
    depends_on:
      - odoo
    environment:
      NGX_HTTP_ACCESS: |
          allow 192.168.1.1;
          allow 172.21.0.1;
          deny all;

--- a/9.0/etc/nginx.conf
+++ b/9.0/etc/nginx.conf
@@ -12,6 +12,7 @@ events {
 
 http {
   include /etc/nginx/mime.types;
+  include /etc/nginx/http-access.conf;
   default_type  application/octet-stream;
 
   sendfile on;
