--- a/9.0/Dockerfile
+++ b/9.0/Dockerfile
@@ -2,3 +2,8 @@ FROM nginx
 MAINTAINER Camptocamp
 
 COPY etc/nginx.conf /etc/nginx/nginx.conf
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+
+ENTRYPOINT ["/docker-entrypoint.sh"]
+
+CMD ["nginx", "-g", "daemon off;"]
