Add NGX_ODOO_HOST to change Odoo's hostname

--- a/9.0/Dockerfile
+++ b/9.0/Dockerfile
@@ -1,9 +1,16 @@
 FROM nginx
 MAINTAINER Camptocamp
 
-COPY etc/nginx.conf /etc/nginx/nginx.conf
+ADD https://github.com/kelseyhightower/confd/releases/download/v0.11.0/confd-0.11.0-linux-amd64 /usr/local/bin/confd
+RUN chmod +x /usr/local/bin/confd
+
+RUN mkdir -p /etc/confd/{conf.d,templates}
+COPY conf.d /etc/confd/conf.d
+COPY templates /etc/confd/templates
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
+
+ENV NGX_ODOO_HOST=odoo
 
 CMD ["nginx", "-g", "daemon off;"]
