fix: cleaning config to fit standard env variable

--- a/9.0/Dockerfile
+++ b/9.0/Dockerfile
@@ -14,5 +14,6 @@ VOLUME ["/var/cache/nginx"]
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
 ENV NGX_ODOO_HOST=odoo
+ENV NGX_ODOO_LONGPOLLING_PORT=8072
 
 CMD ["nginx", "-g", "daemon off;"]
