fix: switch to bookworm + add cache variable env + pdfcontent workaround

--- a/9.0/Dockerfile
+++ b/9.0/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/nginx:alpine
+FROM docker.io/nginx:1.25.1-bookworm
 MAINTAINER Camptocamp
 
 ADD https://github.com/kelseyhightower/confd/releases/download/v0.11.0/confd-0.11.0-linux-amd64 /usr/local/bin/confd
@@ -15,5 +15,6 @@ ENTRYPOINT ["/docker-entrypoint.sh"]
 
 ENV NGX_ODOO_HOST=odoo
 ENV NGX_ODOO_LONGPOLLING_PORT=8072
+ENV NGX_CACHE_SIZE=10m
 
 CMD ["nginx", "-g", "daemon off;"]
